--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,28 +2,8 @@
   box-sizing: border-box;
 }
 
-@font-face {
-  font-family: 'Montserrat';
-  src: url('fonts/montserrat-regular-webfont.woff2') format('woff2'),
-    url('fonts/montserrat-regular-webfont.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('fonts/montserrat-medium-webfont.woff2') format('woff2'),
-    url('fonts/montserrat-medium-webfont.woff') format('woff');
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('fonts/montserrat-semibold-webfont.woff2') format('woff2'),
-    url('fonts/montserrat-semibold-webfont.woff') format('woff');
-  font-weight: 600;
-  font-style: normal;
+:root {
+  --font-family: 'Montserrat', sans-serif;
 }
 
 body {
